--- a/modules/member/lang.korean/pages/_pc/mypage/main.css
+++ b/modules/member/lang.korean/pages/_pc/mypage/main.css
@@ -13,7 +13,7 @@
 #mypage_main li .comment {font:normal 11px arial;color:#FC6138;}
 #mypage_main li .trackback {font:normal 11px arial;color:#02ACD6;}
 #mypage_main li .imgpos {margin-bottom:-1px;}
-#mypage_main li .imgpos1 {margin-bottom:-1px;}
+#mypage_main li .imgpos1 {margin-bottom:-1px;position:absolute;}
 #mypage_main li a {color:#666666;}
 #mypage_main li a:hover {text-decoration:underline;}
 
