--- a/modules/admin/lang.korean/theme/_pc/default/front.css
+++ b/modules/admin/lang.korean/theme/_pc/default/front.css
@@ -25,7 +25,7 @@
 #container .snb .mainmodule ul {padding:0;margin:0;}
 #container .snb .mainmodule li {list-style-type:none;float:left;}
 #container .snb .mainmodule input {display:none;}
-#container .snb .allmodule {width:315px;height:288px;overflow:auto;position:relative;}
+#container .snb .allmodule {width:315px;position:relative;}
 #container .snb .allmodule ul {padding:0;margin:0;}
 #container .snb .allmodule li {list-style-type:none;float:left;}
 #container .snb .allmodule input {display:none;}
