--- a/modules/market/lang.korean/admin/_pc/pack.css
+++ b/modules/market/lang.korean/admin/_pc/pack.css
@@ -26,7 +26,21 @@
 #modulebox .m_pack .themelist .tree .dir01 .nowdir {font-weight:bold;color:#33C9FD;}
 #modulebox .m_pack .themelist .tree .dir01 img {position:relative;top:1px;}
 #modulebox .m_pack .themelist .tree .dir01 .del {position:relative;top:-4px;padding:2px 10px 7px 10px;}
+#modulebox .m_pack .tx {font-weight:bold;font-family:"malgun gothic";font-size:16px;color:#065B8C;}
+#modulebox .m_pack .ub {display:inline-block;padding:5px 5px 2px 5px;margin:10px 0 10px 0;background:#FF4040;color:#ffffff;border-radius:5px 5px 5px 5px;}
+#modulebox .m_pack .ub:hover {background:#DE0000;}
+#modulebox .m_pack .ic {font-size:11px;font-family:dotum;color:#999999;}
+#modulebox .m_pack .u {text-decoration:underline;font-size:11px;font-weight:normal;font-family:dotum;color:#009FFA;}
+#modulebox .m_pack .ins {color:#999999;}
+#modulebox .m_pack .readme {border-top:#c0c0c0 solid 1px;margin-top:20px;}
+#modulebox .m_pack .readme textarea {padding:5px;margin:0;width:100%;height:200px;overflow-x:hidden;overflow-y:auto;line-height:150%;color:#000000;font-family:Courier new, arial, dotum;font-size:9pt;text-align:left;}
 #modulebox .m_ready {padding:30px 0 0 0;margin:30px 0 0 0;border-top:#dfdfdf solid 1px;}
+#modulebox .m_ready .tbox {display:inline-block;margin:15px 0 15px 0;padding:15px;border:#c0c0c0 solid 3px;}
+#modulebox .m_ready table {}
+#modulebox .m_ready td {padding:5px 10px 5px 10px;}
+#modulebox .m_ready .td1 {color:#888888;}
+#modulebox .m_ready .td2 {}
+#modulebox .m_ready .td2 ul {padding:0;margin:0;list-style-type:none;}
 #modulebox .m_ready .msg {line-height:150%;border-bottom:#dfdfdf dotted 1px;padding:0 0 20px 0;margin:0 0 30px 0;}
 #modulebox .m_ready .rbox {width:700px;}
 #modulebox .m_ready .rbox .rmodule {float:left;width:330px;height:70px;margin:0 10px 20px 0;}
